# staapl

./: .gitignore  .header.html  INSTALL  Makefile  Makefile.planet  README.md  code.rkt  default.nix  info.rkt  label-sig.rkt  live-pic18-dtc.rkt  live-pic18.rkt  live.rkt  make  ns-tx.rkt  ns.rkt  pic18-dtc.rkt  pic18.rkt  staaplc.rkt
app/: 1220-8.fm  2550-48.fm  2620-10.fm  4-relay-module-desc.rkt  4-relay-module.fm  4-relay-module.gen-c.rkt  Makefile  README  adapter.fm  arm.fm  bcr2000.sh  console.c  desc-usb.rkt  dip28kit.fm  dip28kit.program  dip40kit-synth.fm  dip40kit.fm  dtc-desc.rkt  dtc-sim.rkt  dtc-test.f  dtc.fm  dtc.scm  pic-usb-stk.fm  picstamp.fm  pk2-2550-8.fm  pk2-452-40.fm  pk2-4550-8.fm  pk2-picstamp.fm  pk2-synth-1220-8.fm  simtest-sim.rkt  simtest.fm  staapler.fm  synth-1220-8.fm  synth-sim.rkt  synth.fm  ttlmono-2620-54.fm
arm/: README.txt  arm-compiler-unit.rkt  arm-forth-unit.rkt  arm-macro-unit.rkt  arm.rkt  asm.rkt  demo-lang.rkt  demo.rkt  lang.rkt  live.rkt  macro.rkt  sig.rkt
asm/: assembler.rkt  dasm.rkt  decoder.rkt  directives.rkt  environ.rkt  operand.rkt  static.rkt
coma/: code-unit.rkt  comma-unit.rkt  macro-forth-sig.rkt  macro-forth-unit.rkt  macro-forth.rkt  macro-utils.rkt  macro.rkt  pattern-meta.rkt  pattern-tx.rkt  pattern.rkt  target-scat.rkt
comp/: compiler-unit.rkt  debug.rkt
control/: cjump-test-unit.rkt  control-unit.rkt
doc/: compiler.scrbl  embeddedgr-20170531.scrbl  flunk-20131120.scrbl  forth.scrbl  introduction.txt  latex-bibtex  (+6 more)
hs/: Makefile  Pic18.hs  pic18-asm.spec  staapl.cabal  staapl.hs  test-staapl.hs
(+836 files in other folders)
