name: staapl
version: 1.0.0
cabal-version: >= 1.18
build-type: Simple
license: BSD3

executable staapl
    build-depends: base
    main-is: staapl.hs
    default-language: Haskell2010

Test-Suite test-staapl
    build-depends: base
    type:       exitcode-stdio-1.0
    main-is:    test-staapl.hs
    build-depends: base
